chapter-6/cicd/cd/jsh-vs.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  name: jsh-seorui
  namespace: default
spec:
  hosts:
    - seorui.com
  gateways:
    - seorui-gateway
  http:
    - match:
        - uri:
            prefix: /jshERP-boot
      route:
        - destination:
            host: jsh-api
            subset: {V1WEIGHT}
          weight: 100
        - destination:
            host: jsh-api
            subset: v2
          weight: {V2WEIGHT}
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: jsh-web
            subset: v1
          weight: 100
        - destination:
            host: jsh-web
            subset: v2
          weight: 0
